<resources>
    <string name="app_name">OldOne</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">搜索</string>
    <string name="publish">发布</string>
    <string name="title_activity_login">登录</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="sign_up">注册</string>
    <string name="sign_in">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="remember_me">记住我</string>
    <string name="register">注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="sign_up_now">立即注册</string>
    <string name="campus">校区</string>

</resources>
