<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/register_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/good_morning_img" />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/gotham"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="32sp" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#96ffffff"
                android:theme="@style/EditScreenTextInputLayoutStyle">

                <EditText
                    android:id="@+id/register_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/account"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#96ffffff"
                android:theme="@style/EditScreenTextInputLayoutStyle">

                <EditText
                    android:id="@+id/register_password1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#96ffffff"
                android:theme="@style/EditScreenTextInputLayoutStyle">

                <EditText
                    android:id="@+id/register_password2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/calibri"
                    android:text="@string/campus"
                    android:textColor="#96ffffff"
                    android:textSize="16sp" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/register_campus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ms_baseColor="@color/white"
                    app:ms_highlightColor="@color/white"
                    android:entries="@array/campus_types" />
            </LinearLayout>

            <Button
                android:id="@+id/register_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/sign_up_now"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="#96ffffff"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>